--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/**
+ * Main Stylesheet
+ * Imports all modular CSS files
+ */
+
+@import 'base.css';
+@import 'ui.css';
+@import 'menu.css';
+
+/* Additional styles can be added here if needed */
+
 * {
     margin: 0;
     padding: 0;
